k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-service
  annotations:
    cloud.google.com/backend-config: '{"default": "employee-backendconfig"}'
  labels:
    app: employee-service
    type: backend
spec:
  type: ClusterIP
  selector:
    app: employee-service
    type: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
