k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-service
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /employee
            pathType: Prefix
            backend:
              service:
                name: employee-service
                port:
                  number: 80
